crates/toml/tests/snapshots/invalid/string/no-close-10.stderr
TOML parse error at line 3, column 2
  |
3 | '
  |  ^
key with no value, expected `=`

---
TOML parse error at line 2, column 6
  |
2 | a = '
  |      ^
invalid literal string, expected `'`

---
TOML parse error at line 3, column 2
  |
3 | '
  |  ^
invalid literal string, expected `'`
